Added ip access to appsetting

--- a/AuthorWorld.UI/appsettings.json
+++ b/AuthorWorld.UI/appsettings.json
@@ -27,6 +27,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultDBConnection": "Server=LAPTOP-9EI2AHBP;Initial Catalog=AuthorDB;User ID=QATUser;Password=p@s$word!123"
+    "DefaultDBConnection": "Server=172.29.0.1;Initial Catalog=AuthorDB;User ID=QATUser;Password=p@s$word!123"
   }
 }
