--- a/AuthorWorld.UI/appsettings.Development.json
+++ b/AuthorWorld.UI/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultDBConnection": "Server=172.29.0.1;Initial Catalog=AuthorDB;User ID=QATUser;Password=p@s$word!123"
   }
 }
