--- a/AuthorWorld.UI/appsettings.json
+++ b/AuthorWorld.UI/appsettings.json
@@ -28,5 +28,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultDBConnection": "Server=172.29.0.1;Initial Catalog=AuthorDB;User ID=QATUser;Password=p@s$word!123"
+  },
+
+  "RedisCacheSettings": {
+    "Configuration": "localhost:6379",
+    "InstanceName": ""
   }
 }
